--- a/index.css
+++ b/index.css
@@ -1,3 +1,40 @@
+#game {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#message {
+  margin-top: 100px;
+  color: rgb(90, 90, 90);
+  font-family: helvetica, monospace;
+  font-size: 14px;
+}
+
+#message h2 {
+  color: rgb(40, 40, 40);
+}
+
+#dishes {
+  position: absolute;
+  bottom: 0px;
+  width: calc(100% + 30px);
+  height: 100px;
+  margin-left: -30px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  opacity: 0.4;
+  overflow: hidden;
+}
+
+#dishes div img {
+  position: absolute;
+  bottom: 0px;
+  image-rendering: pixelated;
+}
+
 /* night / day cycle */
 
 #t {
@@ -5,6 +42,10 @@
 }
 
 #main-frame-error {
+  transition: filter 2.5s;
+}
+
+#dishes {
   transition: filter 2.5s;
 }
 
@@ -143,9 +184,9 @@ body {
   }
 }
 
-@media (max-width: 240px) {
+@media (max-width: 640px) {
   .interstitial-wrapper {
     overflow: inherit;
-    padding: 0 8px;
+    padding: 0 20px;
   }
 }
